Blender-4.0.0-beta - Does not stay open - Crashes Instantly #113124
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#113124
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows 10 home : Laptop Lenovo G50-80
Graphics card: Intel(R) HD Graphics 5500 4.4.0 - Build 20.19.15.5171
Blender Version
Broken: Blender-4.0.0-beta+v40.3f633503d34e-windows.amd64-release
Worked: #111643 ,..... with 'Blender_debug_gpu_glitchworkaround', but with shader viewport problem.
Short description of error
Blender-4.0.0-beta+v40.3f633503d34e-windows.amd64-release, does not stay open with the main Blender Icon Application, or with 'Blender_debug_gpu_glitchworkaround'. Blender 4.0 beta will crash Instantly.
Exact steps for others to reproduce the error
Same as Short description of error
Hi, thanks for the report. Could you also share
C:\Users\User~1\AppData\Local\Temp\blender.crash.txt
?Your GPU is still supported I believe (OpenGL 4.4 and Broadwell architecture)
@PratikPB2123
Here are the crash reports.
. Blender icon application - Crash txt
. Blender_debug_gpu_glitchworkaround - Crash txt
I saved both in case there is something different in them - The Blender icon application has never opened, when I tried any version of Blender 4.0.
@pragma37 @Jeroen-Bakker can you check?
It fails in the first OpenGL command. I don’t have the GPU or similar. So not easy to solve.
Would advice to monitor the issue. Ensure that the driver from the Intel website is installed. Sometimes the default driver of a laptop contains bugs and are not regularly updated.
@memento do you have a similar device?
@Jeroen-Bakker Just checked, unfortunately I do not have access to a machine with an Intel HD 5500...
@Jeroen-Bakker
"Ensure that the driver from the Intel website is installed. Sometimes the default driver of a laptop contains bugs and are not regularly updated."
Just to add the 'Build 20.19.15.5171' is from Intel website. The Laptop drivers are way out of date, and they stopped updating it.
I also have a crash on Lenovo T450s laptop:
Win10 pro, Blender 4.0 stable.
Intel(R) HD Graphics 5500
Driver 20.19.15.5144
ERROR (gpu.shader): draw_command_generate Linking:
| Out of resource error.
Error : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF616E5813B
Module : blender.exe
Thread : 00001258
Can someone add a system info.txt (generated from Blender 3.6) so I can try to isolate what resource it is complaining about?
Also add a report (from Blender 4.0.1) with debug info by starting blender_debug_gpu from the installation folder.
@Jeroen-Bakker
Hope this is what you need!
I think this may be caused by the supported number SSBO bindings.
We target hardware with at least 12 SSBO slots, but I don't think that limit is checked at startup.
Currently it is set to 8. IIRC 12 was an 4.1 limitation.
https://projects.blender.org/blender/blender/src/branch/main/source/blender/gpu/opengl/gl_backend.cc#L183
These devices seems to support 16. http://opengl.gpuinfo.org/displayreport.php?id=1035
Not saying this isn't the issue, but needs more research.
Nope, check
draw_command_generate
(DRW_RESOURCE_ID_SLOT
).But yes, it may be something else.
I found this and it certainly doesn't look like an SSBO limit issue.
The error message is far from helpful.
Is it possible for anyone to install 20.19.15.4624 and test if that fixes the issue for us as well?
@Jeroen-Bakker
Can you share the link to download. Been looking online for the driver had no luck in finding it.
Out of curiosity I tried my Laptop Lenovo G50-80 original graphic drivers. 20.19.15.4835
Blender 4.0.1 opened without any issues!
Edit: All The Viewport shading work as well.
For the HD 4000/5000 series devices we could detect the faulty drivers and show the unsupported platform dialog. And we should document that older drivers might work. For actually developing a workaround we need physical access to those devices, which we don't have.
Note; looking a bit more in the future I expect these devices can still be used for based modelling using workbench. Rendering using EEVEE might become complicated as 4.1 target features that are known not to be performant on HD iGPUs.
All changes landed in 4.1. If we do a 4.0.2 release these changes will be included as well. Closing this issue.
@TH-10 Thanks for testing and providing feedback!